# filtration_domination

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  create_zip.sh  download_datasets.sh  process_charts.r  run_experiments.sh
.github/workflows/: python.yml
datasets/: noisy_torus.txt  torus_200_distmat.txt
examples/: reduce_edge_list.rs  run.rs
experiment/: Cargo.toml  create_graphics.r
experiment/src/: main.rs  memory_usage.rs  mpfree.rs  single_collapse.rs  utils.rs
experiment/src/experiments/: asymptotics.rs  mod.rs  mpfree.rs  multiple_iterations.rs  orders.rs  random_densities.rs  removals.rs
experiments/: .gitignore  README.md  compare_barcodes.sh  compute_barcodes.py  process_charts.r  run_experiments.sh
experiments/barcodes/: compute_barcodes.py  test_barcodes.sh
experiments/datasets/: circle_100_distmat.txt  sphere_100_distmat.txt  swiss_roll_200_distmat.txt  uniform_400_distmat.txt
experiments/experiment_runner/: Cargo.toml
experiments/experiment_runner/src/: main.rs  single_collapse.rs  table.rs  utils.rs
experiments/experiment_runner/src/experiments/: asymptotics.rs  mod.rs  mpfree.rs  multiple_iterations.rs  orders.rs  random_densities.rs  removals.rs
experiments/single_parameter/: CMakeLists.txt  Flag_complex_edge_collapser.h  single_parameter_glisse_pritam.cpp
python/: Cargo.toml  pyproject.toml  test.py
python/src/: lib.rs
src/: chain_complex.rs  edges.rs  filtration.rs  io_utils.rs  lib.rs  mpfree.rs  simplicial_complex.rs
src/datasets/: distance_matrices.rs  graphs.rs  mod.rs  points.rs  sampling.rs
src/distance_matrix/: density_estimation.rs  input.rs  mod.rs  output.rs
src/points/: input.rs  mod.rs  output.rs
src/removal/: adjacency.rs  mod.rs  naive.rs  parallel.rs  utils.rs
src/removal/full/: mod.rs  par.rs  regions.rs  stripes.rs
src/removal/strong/: mod.rs  par.rs
tests/: removal.rs
