[package]
name = "filtration-domination"
authors = ["Ángel Javier Alonso <alonsohernandez@tugraz.at>"]
description = "Algorithm to reduce bifiltered graphs while maintaining the topology of their clique complex."
license = "MIT OR Apache-2.0"
readme = "README.md"
version = "0.1.0"
edition = "2021"

[dependencies]
num = "0.4.0" # Generic numbers.
sorted-iter = "0.1.8" # For sorted iterators and related utils.
rand = "0.8.5" # Random number generation.
litemap = "0.3.0" # Ordered data structure backed by a vector.
rustc-hash = "1.1.0" # Faster hashmaps (but not ddos-resistant).
thiserror = "1.0" # Error ergonomics.
ordered-float = {version = "2.8.0", features = ["rand"]} # Add a total order to floats.

[dev-dependencies]
paste = "1.0.6" # New function names in macros for tests.
clap = { version = "3.1.9", features = ["derive"]} # Argument parsing in examples.
anyhow = "1.0.56" # Error management ergonomics in examples.

[profile.release]
lto = "fat"
codegen-units = 1
