[package]
name = "experiment"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.58"
clap = { version = "3.2.11", features = ["derive"] }
filtration-domination = {path = "../"}
libc = "0.2.126"
procfs = "0.13.2"
rand = "0.8.5"
thiserror = "1.0.31"

[profile.release]
lto = "fat"
codegen-units = 1
